--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - 'main'
     paths:
       - 'scraper/python/**'
-  workflow-dispatch:
+  workflow_dispatch:
 
 permissions:
   id-token: write
