--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "moment": "^2.30.1",
     "postcss": "^8",
     "prisma": "^5.9.1",
+    "recharts": "^2.12.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
