--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "mysql2": "^3.9.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@prisma/client": "^5.9.1",
