--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.4",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2"
