--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -30,6 +32,7 @@
     "eslint-config-next": "14.1.0",
     "moment": "^2.30.1",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "prisma": "^5.9.1",
     "recharts": "^2.12.0",
     "tailwindcss": "^3.3.0",
