--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           --build-arg DB_USERNAME="${{ secrets.DB_USERNAME }}" \
           --build-arg DB_HOST="${{ secrets.DB_HOST }}" \
           --build-arg DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-          --build-arg DB_NAME="${{ secrets.DB_NAME }}" \
+          --build-arg DB_PORT="${{ secrets.DB_PORT }}" \
           -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ env.ECR_IMAGE_TAG }} .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ env.ECR_IMAGE_TAG }}
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${{ env.ECR_IMAGE_TAG }}"
