--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@vercel/analytics": "^1.2.2",
     "dotenv": "^16.4.4",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
